--- a/Module2/index.html
+++ b/Module2/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 <meta charset="utf-8">
-<link rel ="stylesheet" href="style.css">
+<link rel ="stylesheet" href="css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Module 2 Assignment </title>
 </head>
